...
    <string name="title_activity_settings">Settings</string>

    <string name="no_information_available">No weather information available</string>
    <string name="not_connected">Not connected</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_location_default" translatable="false">Germany/Berlin</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_sync_label">Sync Interval (minutes)</string>
...

    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_title_add_location_setting">Enter a new location</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_current_location">Current</string>
    <string name="dialog_place_picker">Place</string>

    <string name="nav_home">Home</string>
    <string name="nav_add_location">Add location</string>
    <string name="nav_remove_current_location">Remove current location</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="location_changed">Location changed!</string>
    <string name="location_removed">Location removed!</string>
    <string name="location_added">Location added!</string>

...
